# FreeSCP

./: .gitignore  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  NEXT-STEPS.md  index.html  readme.md
docs/porting/: FTP-SCOPE.md  LEARNINGS.md  PLAN.md  RESUME.md  ROADMAP.md  STATUS.md  UPSTREAM-PATCHES.md  UPSTREAM-SYNC.md
libs/libs3/src/: request.c
libs/neon/src/: config.h  ne_defs.h  ne_openssl.c  ne_socket.c
native/: .clangd  .gitignore  CMakeLists.txt
native/core/: CMakeLists.txt
native/expat/: CMakeLists.txt
native/filezilla/: CMakeLists.txt
native/filezilla/casecompat/: FileZillaTools.h  Ws2tcpip.h  asyncproxysocketlayer.h  filezillaapi.h  transfersocket.h
native/filezilla/compat/: TextsFileZilla.h  afx.h  afx_format.cpp  afx_statics.cpp  afxconv.h  atlconv.h  oleauto.h  winmsg.cpp  winmsg.h  winsock2.h  wtypes.h
native/harness/: CMakeLists.txt  interface_stub.cpp  main.cpp
native/libs3/: CMakeLists.txt
native/neon/: CMakeLists.txt  neon_config_unix.h
native/putty/: CMakeLists.txt  patch_conf.cmake
native/putty/include/: platform.h  proxy\proxy.h  ssh\gss.h
native/putty/include/windows/: platform.h
native/putty/src/: uxhandlewait.c  uxnet.c  uxstore.c  uxstubs.c  uxsupport.c
native/rtlcompat/: CMakeLists.txt
native/rtlcompat/include/: Classes.hpp  CompThread.hpp  Consts.hpp  Contnrs.hpp  DateUtils.hpp  FileCtrl.hpp  Masks.hpp  Math.hpp  Registry.hpp  Soap.EncdDecd.hpp  StrUtils.hpp  SysInit.hpp  SysUtils.hpp  System.DateUtils.hpp  System.IOUtils.hpp  System.JSON.hpp  System.StrUtils.hpp  System.SyncObjs.hpp  System.Types.hpp  System.hpp  WideStrUtils.hpp  Windows.hpp  XMLIntf.hpp  Xml.XMLDoc.hpp  Xml.XMLIntf.hpp  vcl.h
native/rtlcompat/include/winapi/: io.h  lmcons.h  process.h  psapi.h  secext.h  shlobj.h  shlwapi.h  sspi.h  tlhelp32.h  wincrypt.h  windows.h  winsock2.h  ws2ipdef.h  ws2tcpip.h
native/rtlcompat/include/winscp/: AnsiStrings.h  DelphiSet.h  DynamicArray.h  Object.h  Property.h  SysExtra.h  SysStrFuncs.h  UnicodeString.h  WcsCompat.h  WinCompat.h  WinThreads.h  rtldefs.h  wintypes.h
native/rtlcompat/src/: Containers.cpp  Format.cpp  IniFiles.cpp  JsonDoc.cpp  Masks.cpp  ResStrings.cpp  StrUtils.cpp  Streams.cpp  StringConv.cpp  SysExtra.cpp  SysStrFuncs.cpp  SysUtils.cpp  Threading.cpp  WcsCompat.cpp  WinSock.cpp  XmlDoc.cpp
native/rtlcompat/test/: test_format.cpp  test_rtlcompat.cpp
native/scripts/: build-linux.sh  build-macos.sh  package-linux.sh  release-macos.sh
native/tools/: genprops.py  genstrings.py
native/ui-qt/: CMakeLists.txt  enginebridge.cpp  enginebridge.h  entitlements.mac.plist  main.cpp  resources.qrc  winscp.icns
source/core/: Common.h  Configuration.cpp  Exceptions.h  FileBuffer.cpp  FileBuffer.h  FtpFileSystem.cpp  PuttyIntf.cpp  SecureShell.cpp  SecureShell.h  SessionInfo.cpp  SftpFileSystem.cpp  Terminal.cpp  Terminal.h
source/filezilla/: AsyncProxySocketLayer.cpp  FtpControlSocket.cpp
source/putty/: be_list.c  defs.h  settings.c
